# cratedb-search

./: SPEC.md  full_text_search.py  main.py  pyproject.toml  vec_perf_test.py  vector.txt
components/cratedb-search-backend/: main.py
components/cratedb-search-component/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
components/cratedb-search-component/src/: App.vue  index.js  search.js
components/cratedb-search-component/src/components/: SearchBase.vue
demos/cratedb-movies/: package-lock.json  package.json  vite.config.mts
demos/cratedb-movies/src/: App.vue
demos/cratedb-movies/src/pages/: index.vue
docs_to_index/: debug.json  docs_to_index_v1.py  docs_to_index_v2.py  docs_to_index_v3.py  docs_to_index_v4.py  docs_to_index_v5.py
embeddings/: io.py  openai.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: CrateSearch.vue  CrateSearchBase.vue
