[tool.poetry]
name = "cratedb-search"
version = "0.1.0"
description = ""
authors = ["surister <surister98@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.5"
crate = {version = "^0.35.2", extras = ["sqlalchemy"]}
pandas = "^2.2.0"
pyarrow = "^15.0.0"
adbc-driver-postgresql = "^0.9.0"
docutils = "^0.20.1"
pygments = "^2.17.2"
docutils-stubs = "^0.0.22"
openai = "^1.23.6"
python-ulid = "^2.5.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.1"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
